# Sentiment-Analysis-An-Rust

./: Cargo.toml  README.md  model.ot
src/: main.rs
