[package]
name = "sentiment_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
torch-sys = "0.20.0"
tch = "0.20.0"
dlopen = "0.1.8"
libc = "0.2.174"
sysinfo = "0.29.3"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"
